Sorted overflow issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
@@ -172,7 +171,8 @@ table {
 
 body, html {
   width: 100%;
-  height: 100%; }
+  height: 100%;
+  overflow: hidden; }
 
 body {
   font-family: Arial; }
